<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">基站助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎来到XX基站</string>
    <string name="basicdatawelcome">欢迎来到XX基站</string>
    <string name="zhanming">站  名</string>
    <string name="jindu">经  度</string>
    <string name="weidu">纬  度</string>
    <string name="fangweijiao0">方位角0</string>
    <string name="fangweijiao1">方位角1</string>
    <string name="ipdizhi">http://192.168.1.101:8080/BTSHelper/</string>
    <string name="relogin">返回登陆</string>
    <string name="reidcheck">重选基站</string>
    <string name="slidinmenuabout">about</string>
    <string name="login_loginbtn">登录</string>
    <string name="login_reset">重置</string>
    <string name="bcpeople">巡检人</string>
    <string name="shebei_biaoshi">设备标识</string>
    <string name="shebei_banka">设备板卡</string>
    <string name="shebei_zouxian">设备走线</string>
    <string name="shebei_jietou">设备接头</string>
    <string name="shebei_gaopin">高频设备</string>
    <string name="shebei_fengshan">设备风扇</string>
    <string name="shebei_gaojing">设备告警</string>
    <string name="shebei_qingjie">设备清洁</string>
    <string name="jichu_zhanzhi">站址</string>
    <string name="jichu_tiankui">天馈</string>
    <string name="jichu_shigong">施工工艺</string>
    <string name="huanjing_wendu">环境温度</string>
    <string name="huanjing_shidu">环境湿度</string>
    <string name="huanjing_qingjie">环境清洁</string>
    <string name="huanjing_xiaofang">消防</string>
    <string name="huanjing_qita">其他——环境</string>
    <string name="tiankui_xian">天馈线</string>
    <string name="tiankui_mifeng">天馈密封</string>
    <string name="tiankui_jiedi">天馈接地</string>
    <string name="tiankui_wanqu">天馈弯角</string>
    <string name="tieta">铁塔</string>
    <string name="kongtiao_gaojing">空调告警</string>
    <string name="kongtiao_yunxing">空调运行</string>
    <string name="kongtiao_qingjie">空调清洁</string>
    <string name="donglixitong">电源系统</string>
    <string name="fangleijiedi">防雷接地</string>
    <string name="chuanshu_banka">传输板卡</string>
    <string name="chuanshu_gaojing">传输告警</string>
    <string name="chuanshu_jietou">传输接头</string>
    <string name="lsbcreturn">返回</string>

</resources>