<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slidelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azure"
    android:orientation="vertical" >

    <com.jeremyfeinstein.slidingmenu.lib.SlidingMenu
        android:id="@+id/slidingmenulayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:background="@color/lightcoral"
                android:id="@+id/slidingmenuloging"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/relogin" />

            <Button
                android:background="@color/lightcoral"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/slidingmenuidcheck"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reidcheck" />

            <Button
                android:background="@color/lightcoral"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/slidingmenuabout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/slidinmenuabout" />
        </LinearLayout>
    </com.jeremyfeinstein.slidingmenu.lib.SlidingMenu>

</LinearLayout>